[tool.poetry]
name = "repl_python3_HACKING-VS-COMPUTER-SECURITY"
version = "0.1.0"
description = ""
authors = ["Kunal-Diwan <Kunaldiwan1405@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
